--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,35 @@
 [tool.poetry]
-name = "addpage"
-version = "0.0.4"
-description = "`addpage` is a package for adding page number to PDF file."
 authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
-homepage = "https://github.com/SaitoTsutomu/addpage"
 classifiers = [
-   "Development Status :: 1 - Planning",
-   "License :: OSI Approved :: Python Software Foundation License",
-   "Programming Language :: Python",
-   "Topic :: Software Development",
-   "Topic :: Scientific/Engineering",
+  "Development Status :: 1 - Planning",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python",
+  "Topic :: Software Development",
+  "Topic :: Scientific/Engineering",
 ]
-license = "PSFL"
+description = "`addpage` is a package for adding page number to PDF file."
+homepage = "https://github.com/SaitoTsutomu/addpage"
+license = "MIT"
+name = "addpage"
 readme = "README.rst"
+version = "0.0.5"
 
 [tool.poetry.scripts]
 addpage = "addpage:main"
 
 [tool.poetry.dependencies]
-python = "^3.7"
 PyPDF2 = "^1.26.0"
-reportlab = "^3.5.42"
 pdfformfiller = "^0.4"
+python = "^3.7"
+reportlab = "^3.5.42"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-flake8 = "^3.7.9"
 black = "^19.10b0"
+flake8 = "^3.7.9"
 isort = "^4.3.21"
 mypy = "^0.770"
+pytest = "^5.2"
 
 [build-system]
-requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
