--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,34 +2,34 @@
 authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
 classifiers = [
   "Development Status :: 1 - Planning",
-  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python",
   "Topic :: Software Development",
   "Topic :: Scientific/Engineering",
 ]
 description = "`addpage` is a package for adding page number to PDF file."
 homepage = "https://github.com/SaitoTsutomu/addpage"
-license = "MIT"
+license = "Apache-2.0"
 name = "addpage"
 readme = "README.rst"
-version = "0.0.5"
+version = "0.1.0"
+
+[tool.poetry.dependencies]
+pdfformfiller = "^0.4"
+pypdf2 = "^1.26.0"
+python = "^3.10"
+reportlab = "^3.5.42"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
+flake8 = "^6.0.0"
+isort = "^5.10.1"
+mypy = "^0.991"
+pytest = "^7.2.0"
 
 [tool.poetry.scripts]
 addpage = "addpage:main"
 
-[tool.poetry.dependencies]
-PyPDF2 = "^1.26.0"
-pdfformfiller = "^0.4"
-python = "^3.7"
-reportlab = "^3.5.42"
-
-[tool.poetry.dev-dependencies]
-black = "^19.10b0"
-flake8 = "^3.7.9"
-isort = "^4.3.21"
-mypy = "^0.770"
-pytest = "^5.2"
-
 [build-system]
-build-backend = "poetry.masonry.api"
-requires = ["poetry>=0.12"]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
