--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 pdfformfiller = "^0.4"
-pypdf2 = "^1.26.0"
+pypdf2 = "1.26.0"
 python = "^3.10"
 reportlab = "^3.5.42"
 
