--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
-[tool.poetry]
-authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
+[project]
+authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
 classifiers = [
   "Development Status :: 1 - Planning",
   "License :: OSI Approved :: Apache Software License",
@@ -7,25 +7,53 @@ classifiers = [
   "Topic :: Software Development",
   "Topic :: Scientific/Engineering",
 ]
+dependencies = [
+  "pdfformfiller>=0.4",
+  "pypdf2==1.27.9",
+  "reportlab>=4.2.2",
+]
 description = "`addpage` is a package for adding page number to PDF file."
-homepage = "https://github.com/SaitoTsutomu/addpage"
-license = "Apache-2.0"
+license = {text = "Apache-2.0"}
 name = "addpage"
-readme = "README.rst"
-version = "0.2.0"
+readme = "README.md"
+requires-python = ">=3.12"
+version = "0.3.0"
 
-[tool.poetry.dependencies]
-pdfformfiller = "^0"
-pypdf2 = "1.27.9"
-python = "^3.11"
-reportlab = "^4.2"
+[project.urls]
+homepage = "https://github.com/SaitoTsutomu/addpage"
 
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.11"
-
-[tool.poetry.scripts]
+[project.scripts]
 addpage = "addpage:main"
 
+[tool.uv]
+dev-dependencies = []
+
+[tool.mypy]
+files = "src"
+ignore_missing_imports = true
+
+[tool.ruff]
+src = ["src"]
+
+[tool.ruff.lint]
+ignore = ["E501", "N802", "N803", "N806"]
+select = [
+  "F", # Pyflakes https://docs.astral.sh/ruff/rules/#pyflakes-f
+  "E", # pycodestyle Error https://docs.astral.sh/ruff/rules/#error-e
+  "W", # pycodestyle Warning https://docs.astral.sh/ruff/rules/#warning-w
+  "C90", # mccabe https://docs.astral.sh/ruff/rules/#mccabe-c90
+  "I", # isort https://docs.astral.sh/ruff/rules/#isort-i
+  "N", # pep8-naming https://docs.astral.sh/ruff/rules/#pep8-naming-n
+  "UP", # pyupgrade https://docs.astral.sh/ruff/rules/#pyupgrade-up
+  "YTT", # flake8-2020 https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
+  "B", # flake8-bugbear https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
+  "A", # flake8-builtins https://docs.astral.sh/ruff/rules/#flake8-builtins-a
+  "RUF", # Ruff-specific rules https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
+]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
